# ElaraOS

./: Cargo.toml
system/initramfs/: Cargo.toml
system/initramfs/src/: main.rs
userland/base-utils/: Cargo.toml
userland/base-utils/src/: main.rs
userland/utilities/change/: Cargo.toml
userland/utilities/change/src/: main.rs
userland/utilities/login/: Cargo.toml
userland/utilities/login/.cargo/: config.toml
userland/utilities/login/src/: main.rs
userland/utilities/usermanage/: Cargo.toml
userland/utilities/usermanage/src/: main.rs
